recorrecting the images name in index file

--- a/index.html
+++ b/index.html
@@ -62,14 +62,14 @@
       </section>
       <section class="right-container">
         <section class="right-1">
-          <img src="./images/Vector (1).png" alt="" />
+          <img src="./images/Vector.png" alt="" />
         </section>
         <section class="right-2">
           <div class="right-2-img-1">
-            <img src="./images/left--.png" alt="" />
+            <img src="./images/left.png" alt="" />
           </div>
           <div class="right-2-img-2">
-            <img src="./images/right--.png" alt="" />
+            <img src="./images/right.png" alt="" />
           </div>
         </section>
       </section>
