--- a/index.html
+++ b/index.html
@@ -25,11 +25,10 @@
       </section>
       <section class="navigation-container">
         <ul>
-          <a href="./index.html"><li>Home</li></a>
+          <a href="./index.html"><li class="Home-container">Home</li></a>
           <a href="./appointment.html"><li>Appointment</li></a>
           <a href="./services.html"><li>Services</li></a>
-          <a href="./aboutUs.html">
-            <li class="Aboutus-container">About us</li></a
+          <a href="./aboutUs.html"> <li >About us</li></a
           >
           <a href="./contactUs.html"><li>Contact Us</li></a>
         </ul>
